crates/aw-cli/src/cmd/snapshots/aw__cmd__query__tests__procs_tree_table.snap
---
source: crates/aw-cli/src/cmd/query.rs
expression: rendered
---
proc  pid  exe     argv        退出码  redaction      evidence
10    100  demo    <redacted>  7       P1 脱敏为占位  E1 系统
  11  101  helper  不可得      没采    P1 脱敏为占位  S 采样
