crates/aw-cli/src/cmd/snapshots/aw__cmd__query__tests__sessions_list_json.snap
---
source: crates/aw-cli/src/cmd/query.rs
expression: body
---
{
  "sessions": [
    {
      "agent": "example-agent",
      "end_reason": "exited",
      "end_reason_label": "程序已退出",
      "ended_ns": 1700000060000000000,
      "evidence": {
        "level": "E1"
      },
      "id": "s-7k2m",
      "mode": "launch",
      "name": "demo",
      "pinned": false,
      "started_ns": 1700000000000000000
    }
  ]
}
