crates/aw-cli/src/cmd/snapshots/aw__cmd__query__tests__sessions_list_table.snap
---
source: crates/aw-cli/src/cmd/query.rs
expression: rendered
---
id      name  mode    agent          started_ns           ended_ns             pinned  evidence
s-7k2m  demo  launch  example-agent  1700000000000000000  1700000060000000000  no      E1 系统
