crates/aw-cli/src/cmd/snapshots/aw__cmd__query__tests__sessions_show_json.snap
---
source: crates/aw-cli/src/cmd/query.rs
expression: body
---
{
  "capabilities": [
    {
      "category": "CAP-PROC",
      "evidence": {
        "level": "E1"
      },
      "source": "fixture.proc"
    },
    {
      "category": "CAP-NET",
      "evidence": {
        "level": "E1"
      },
      "source": "fixture.net"
    },
    {
      "category": "CAP-DNS",
      "evidence": {
        "level": "NA",
        "reason": "no_dns_observed"
      },
      "source": null
    }
  ],
  "gap_summaries": [
    "fixture.proc overflow 1700000002000000000–1700000002500000000"
  ],
  "session": {
    "agent": "example-agent",
    "end_reason": "exited",
    "end_reason_label": "程序已退出",
    "ended_ns": 1700000060000000000,
    "evidence": {
      "level": "E1"
    },
    "exit_code": null,
    "id": "s-7k2m",
    "mode": "launch",
    "name": "demo",
    "pinned": false,
    "started_ns": 1700000000000000000
  },
  "stats": {
    "bytes_down": 420,
    "bytes_up": 150,
    "dns": 0,
    "flows": 3,
    "gaps": 1,
    "processes": 2
  }
}
